--- a/Capstone_two.ipynb
+++ b/Capstone_two.ipynb
@@ -2,29 +2,230 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "error",
-     "evalue": "OpenCV(4.1.0) /Users/travis/build/skvark/opencv-python/opencv/modules/highgui/src/window.cpp:352: error: (-215:Assertion failed) size.width>0 && size.height>0 in function 'imshow'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-4eaf03d118c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;31m# Display cropped image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"image\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimCrop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwaitKey\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.1.0) /Users/travis/build/skvark/opencv-python/opencv/modules/highgui/src/window.cpp:352: error: (-215:Assertion failed) size.width>0 && size.height>0 in function 'imshow'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 https-::www.drlegacy.com:dental-technology.jpg\n",
+      "2 download.jpeg\n"
      ]
     }
    ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
+    "import imageio\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
     " \n",
     "if __name__ == '__main__' :\n",
     " \n",
+    "    DEFAULT_HEIGHT = 400\n",
+    "    count=0\n",
+    "    k=0\n",
+    "    df = pd.DataFrame(columns=['coordinate', 'image', 'image_crop'])\n",
+    "   \n",
+    "    for file in os.listdir('train_cv'):\n",
+    "        count+=1\n",
+    "        print(str(count)+\" \"+file)\n",
+    "        #print(file)\n",
     "    # Read image\n",
-    "    im = cv2.imread(\"x-rays/Digital-dental-bitewing-xray.jpg\")\n",
+    "        im1 = cv2.imread('train_cv/%s'% file)\n",
+    "        height, width = im1.shape[:2]\n",
+    "      \n",
+    "    \n",
+    "        im=cv2.resize(im1,(int(DEFAULT_HEIGHT*width/height), DEFAULT_HEIGHT))\n",
+    "     \n",
+    "    # Select ROI\n",
+    "    \n",
+    "        loop_label = True\n",
+    "        while(loop_label):\n",
+    "            k+=1\n",
+    "            r = cv2.selectROI(im)\n",
+    "            print(r)\n",
+    "            \n",
+    "            \n",
+    "            # Crop image\n",
+    "            imCrop = im[int(r[1]):int(r[1]+r[3]), int(r[0]):int(r[0]+r[2])]\n",
+    "\n",
+    "            # Resized cropped image\n",
+    "            DEFAULT_HEIGHT_CROP = 50\n",
+    "            height_c, width_c = imCrop.shape[:2]\n",
+    "            imCrop_resize=cv2.resize(imCrop,(int(DEFAULT_HEIGHT_CROP*width_c/height_c), DEFAULT_HEIGHT_CROP))\n",
+    "            \n",
+    "            # ??? how to normalize??\n",
+    "\n",
+    "            # Turn cropped image into a matrix\n",
+    "            # seems like imCrop is already a matrix\n",
+    "            #a=imageio.imread(imCrop)\n",
+    "            \n",
+    "            # save matrix and coordinates into a dictionary\n",
+    "            \n",
+    "            #d[‘r1’]=coord_lower_right\n",
+    "            \n",
+    "    \n",
+    "            df.loc[k] = str(k) + str(r)+ str(im) +str(imCrop)\n",
+    "\n",
+    "            #d = {}\n",
+    "            #d['coordinate']=r\n",
+    "            #d['image']=im\n",
+    "            #d['image_crop']=imCrop\n",
+    "            #Add any other variables or number about this image that you want to keep\n",
+    "            #df=pd.concat([df, pd.DataFrame(d)])\n",
+    "\n",
+    "\n",
+    "            \n",
+    "            # select more areas (any key other than return key) or go on to the next image (return key)\n",
+    "            k = cv2.waitKey(0)\n",
+    "            # k =13 is return key, pressing return will switch to the next image. \n",
+    "            # Pressing other keys will allow multiple selctions\n",
+    "            if k == 13:\n",
+    "                loop_label = False\n",
+    "                break\n",
+    "            else:\n",
+    "                continue\n",
+    "                \n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import imageio\n",
+    "import os\n",
+    "\n",
+    " \n",
+    "if __name__ == '__main__' :\n",
+    " \n",
+    "    DEFAULT_HEIGHT = 400\n",
+    "    count=0\n",
+    "    \n",
+    "    for file in os.listdir('train_cv'):\n",
+    "        count+=1\n",
+    "        print(str(count)+\" \"+file)\n",
+    "        #print(file)\n",
+    "    # Read image\n",
+    "        im1 = cv2.imread('train_cv/%s'% file)\n",
+    "        height, width = im1.shape[:2]\n",
+    "    \n",
+    "        im=cv2.resize(im1,(int(DEFAULT_HEIGHT*width/height), DEFAULT_HEIGHT))\n",
+    "     \n",
+    "    # Select ROI\n",
+    "        r = cv2.selectROI(im)\n",
+    "        print(r)\n",
+    "     \n",
+    "    # Crop image\n",
+    "        imCrop = im[int(r[1]):int(r[1]+r[3]), int(r[0]):int(r[0]+r[2])]\n",
+    "        \n",
+    "    # Resized cropped image\n",
+    "        \n",
+    "    \n",
+    "    # Turn cropped image into a matrix\n",
+    "        a=imageio.imread(imCrop)\n",
+    " \n",
+    "    # Display cropped image\n",
+    "        #cv2.imshow('train_cv/%s'% file, imCrop)\n",
+    "        cv2.waitKey(0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import imageio\n",
+    "a=imageio.imread('train_cv/https-::www.drlegacy.com:dental-technology.jpg')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 https-::www.drlegacy.com:dental-technology.jpg\n",
+      "(230, 167, 38, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    " \n",
+    "if __name__ == '__main__' :\n",
+    " \n",
+    "    DEFAULT_HEIGHT = 400\n",
+    "    count=0\n",
+    "    \n",
+    "    for file in os.listdir('train_cv'):\n",
+    "        count+=1\n",
+    "        print(str(count)+\" \"+file)\n",
+    "        #print(file)\n",
+    "    # Read image\n",
+    "        im1 = cv2.imread('train_cv/%s'% file)\n",
+    "        height, width = im1.shape[:2]\n",
+    "    \n",
+    "        \n",
+    "        im=cv2.resize(im1,(int(DEFAULT_HEIGHT*width/height), DEFAULT_HEIGHT))\n",
+    "     \n",
+    "    # Select ROI\n",
+    "        r = cv2.selectROI(im)\n",
+    "        print(r)\n",
+    "     \n",
+    "    # Crop image\n",
+    "        imCrop = im[int(r[1]):int(r[1]+r[3]), int(r[0]):int(r[0]+r[2])]\n",
+    " \n",
+    "    # Display cropped image\n",
+    "        cv2.imshow('train_cv/%s'% file, imCrop)\n",
+    "        cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "if __name__ == '__main__' :\n",
+    " \n",
+    "\n",
+    "    # Read image\n",
+    "    im = cv2.imread(\"train/images.jpeg\")\n",
+    "    \n",
     "     \n",
     "    # Select ROI\n",
     "    r = cv2.selectROI(im)\n",
@@ -33,8 +234,200 @@
     "    imCrop = im[int(r[1]):int(r[1]+r[3]), int(r[0]):int(r[0]+r[2])]\n",
     " \n",
     "    # Display cropped image\n",
-    "    cv2.imshow(\"image\", imCrop)\n",
-    "    cv2.waitKey(0)"
+    "    #cv2.imshow(\"image\", imCrop)\n",
+    "    #cv2.waitKey(0)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[180, 180, 180],\n",
+       "        [178, 178, 178],\n",
+       "        [177, 177, 177],\n",
+       "        [176, 176, 176],\n",
+       "        [175, 175, 175],\n",
+       "        [171, 171, 171],\n",
+       "        [166, 166, 166],\n",
+       "        [164, 164, 164],\n",
+       "        [166, 166, 166]],\n",
+       "\n",
+       "       [[177, 177, 177],\n",
+       "        [175, 175, 175],\n",
+       "        [174, 174, 174],\n",
+       "        [173, 173, 173],\n",
+       "        [172, 172, 172],\n",
+       "        [170, 170, 170],\n",
+       "        [164, 164, 164],\n",
+       "        [165, 165, 165],\n",
+       "        [170, 170, 170]],\n",
+       "\n",
+       "       [[175, 175, 175],\n",
+       "        [173, 173, 173],\n",
+       "        [172, 172, 172],\n",
+       "        [171, 171, 171],\n",
+       "        [170, 170, 170],\n",
+       "        [168, 168, 168],\n",
+       "        [163, 163, 163],\n",
+       "        [166, 166, 166],\n",
+       "        [172, 172, 172]],\n",
+       "\n",
+       "       [[171, 171, 171],\n",
+       "        [169, 169, 169],\n",
+       "        [169, 169, 169],\n",
+       "        [170, 170, 170],\n",
+       "        [171, 171, 171],\n",
+       "        [164, 164, 164],\n",
+       "        [163, 163, 163],\n",
+       "        [167, 167, 167],\n",
+       "        [170, 170, 170]],\n",
+       "\n",
+       "       [[168, 168, 168],\n",
+       "        [166, 166, 166],\n",
+       "        [166, 166, 166],\n",
+       "        [167, 167, 167],\n",
+       "        [168, 168, 168],\n",
+       "        [163, 163, 163],\n",
+       "        [161, 161, 161],\n",
+       "        [164, 164, 164],\n",
+       "        [169, 169, 169]],\n",
+       "\n",
+       "       [[167, 167, 167],\n",
+       "        [165, 165, 165],\n",
+       "        [165, 165, 165],\n",
+       "        [166, 166, 166],\n",
+       "        [167, 167, 167],\n",
+       "        [161, 161, 161],\n",
+       "        [158, 158, 158],\n",
+       "        [160, 160, 160],\n",
+       "        [167, 167, 167]],\n",
+       "\n",
+       "       [[170, 170, 170],\n",
+       "        [168, 168, 168],\n",
+       "        [167, 167, 167],\n",
+       "        [168, 168, 168],\n",
+       "        [169, 169, 169],\n",
+       "        [162, 162, 162],\n",
+       "        [156, 156, 156],\n",
+       "        [157, 157, 157],\n",
+       "        [165, 165, 165]],\n",
+       "\n",
+       "       [[175, 175, 175],\n",
+       "        [173, 173, 173],\n",
+       "        [173, 173, 173],\n",
+       "        [174, 174, 174],\n",
+       "        [174, 174, 174],\n",
+       "        [165, 165, 165],\n",
+       "        [156, 156, 156],\n",
+       "        [154, 154, 154],\n",
+       "        [163, 163, 163]],\n",
+       "\n",
+       "       [[178, 178, 178],\n",
+       "        [175, 175, 175],\n",
+       "        [175, 175, 175],\n",
+       "        [176, 176, 176],\n",
+       "        [177, 177, 177],\n",
+       "        [170, 170, 170],\n",
+       "        [158, 158, 158],\n",
+       "        [153, 153, 153],\n",
+       "        [162, 162, 162]],\n",
+       "\n",
+       "       [[176, 176, 176],\n",
+       "        [174, 174, 174],\n",
+       "        [174, 174, 174],\n",
+       "        [175, 175, 175],\n",
+       "        [176, 176, 176],\n",
+       "        [176, 176, 176],\n",
+       "        [161, 161, 161],\n",
+       "        [154, 154, 154],\n",
+       "        [162, 162, 162]],\n",
+       "\n",
+       "       [[173, 173, 173],\n",
+       "        [171, 171, 171],\n",
+       "        [171, 171, 171],\n",
+       "        [172, 172, 172],\n",
+       "        [173, 173, 173],\n",
+       "        [180, 180, 180],\n",
+       "        [164, 164, 164],\n",
+       "        [154, 154, 154],\n",
+       "        [161, 161, 161]],\n",
+       "\n",
+       "       [[180, 180, 180],\n",
+       "        [179, 179, 179],\n",
+       "        [178, 178, 178],\n",
+       "        [177, 177, 177],\n",
+       "        [177, 177, 177],\n",
+       "        [173, 173, 173],\n",
+       "        [172, 172, 172],\n",
+       "        [157, 157, 157],\n",
+       "        [152, 152, 152]],\n",
+       "\n",
+       "       [[180, 180, 180],\n",
+       "        [179, 179, 179],\n",
+       "        [178, 178, 178],\n",
+       "        [177, 177, 177],\n",
+       "        [176, 176, 176],\n",
+       "        [174, 174, 174],\n",
+       "        [172, 172, 172],\n",
+       "        [161, 161, 161],\n",
+       "        [153, 153, 153]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r\n",
+    "imCrop\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-f7d9e5ff7267>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-f7d9e5ff7267>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    boundingBoxes = cv2.selectROIs(windowName, img[, showCrosshair[, fromCenter]])\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To select multiple ROI's in Python:\n",
+    "boundingBoxes = cv2.selectROIs(windowName, img[, showCrosshair[, fromCenter]])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(170, 203, 16, 22)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r"
    ]
   },
   {
@@ -126,6 +519,13 @@
     "thresh_callback(thresh)\n",
     "cv.waitKey()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
