--- a/Capstone_two.ipynb
+++ b/Capstone_two.ipynb
@@ -10,7 +10,15 @@
      "output_type": "stream",
      "text": [
       "1 https-::www.drlegacy.com:dental-technology.jpg\n",
-      "2 download.jpeg\n"
+      "(326, 163, 32, 23)\n",
+      "(311, 182, 14, 44)\n",
+      "2 download.jpeg\n",
+      "(290, 211, 54, 59)\n",
+      "(175, 201, 47, 47)\n",
+      "3 https-::www.ccdental.com.au:blog:why-dental-x-rays-play-a-crucial-part-in-your-dental-visit.jpeg\n",
+      "(91, 240, 23, 25)\n",
+      "(175, 112, 29, 25)\n",
+      "(241, 101, 23, 14)\n"
      ]
     }
    ],
@@ -26,7 +34,7 @@
     " \n",
     "    DEFAULT_HEIGHT = 400\n",
     "    count=0\n",
-    "    k=0\n",
+    "    i=0\n",
     "    df = pd.DataFrame(columns=['coordinate', 'image', 'image_crop'])\n",
     "   \n",
     "    for file in os.listdir('train_cv'):\n",
@@ -44,7 +52,7 @@
     "    \n",
     "        loop_label = True\n",
     "        while(loop_label):\n",
-    "            k+=1\n",
+    "            i+=1\n",
     "            r = cv2.selectROI(im)\n",
     "            print(r)\n",
     "            \n",
@@ -68,7 +76,7 @@
     "            #d[‘r1’]=coord_lower_right\n",
     "            \n",
     "    \n",
-    "            df.loc[k] = str(k) + str(r)+ str(im) +str(imCrop)\n",
+    "            df.loc[i] = str(i) + str(r)+ str(im) +str(imCrop)\n",
     "\n",
     "            #d = {}\n",
     "            #d['coordinate']=r\n",
@@ -98,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "df\n"
    ]
   },
   {
