--- a/capstone_two_modeling.ipynb
+++ b/capstone_two_modeling.ipynb
@@ -216,10 +216,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_test=np.load(\"./X_test.npy\")\n",
+    "Y_test=np.load(\"./Y_test.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "score = model.evaluate(X_test, Y_test, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.907540876865387, 0.57]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['loss', 'acc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.metrics_names)"
+   ]
   },
   {
    "cell_type": "code",
